--- a/wp-content/themes/bigscarytheme/fluid.less
+++ b/wp-content/themes/bigscarytheme/fluid.less
@@ -126,6 +126,30 @@ header {
 	}
 }
 
+#score {
+	text-align: center;
+
+	h2 {
+	font-size: 1.8em;
+	font-weight: 800;
+	}
+
+	#yourScore {
+		font-size: 1.2em;	
+	}
+
+	h3 {
+	font-size: 1.4em;
+	font-weight: 600;
+	font-style: italic;
+	}
+
+	#potential {
+		font-size: 1.2em;
+		font-style: italic;
+	}
+}
+
 @media screen and (max-width: 640px) {
 	#started, #ideas {
 		.column(12);
