fixing bug in updates of progress, updating score dynamically, adding completed tasks area

--- a/wp-content/themes/bigscarytheme/fluid.less
+++ b/wp-content/themes/bigscarytheme/fluid.less
@@ -80,7 +80,7 @@ header {
 	text-align: center;
 }
 
-#started, #ideas {
+#started, #ideas, #completed {
 	.column(6);
 	float: left;
 	text-align: center;
@@ -123,6 +123,14 @@ header {
 	.inProgressPercentInput {
 		width: 15%;
 		text-align: center;
+	}
+}
+
+#completed {
+	.column(12);
+
+	.inProgressPercent {
+		display: none;
 	}
 }
 
