--- a/wp-content/themes/bigscarytheme/styles/fluid.css
+++ b/wp-content/themes/bigscarytheme/styles/fluid.css
@@ -25,7 +25,7 @@ body {
   width: 81.25%;
   margin: 0 1.04167%;
   background: #fff;
-  margin: 2em auto;
+  margin: 0px auto;
   padding: 10px;
   float: none;
   display: block;
@@ -36,7 +36,8 @@ header {
   header h1 {
     text-align: center;
     font-size: 2.2em;
-    font-weight: 800; }
+    font-weight: 800;
+    margin: 1em auto .5em auto; }
 
 a {
   color: #000000; }
@@ -50,10 +51,14 @@ a {
   -webkit-column-count: 2;
   -webkit-column-gap: 20px;
   column-count: 2;
-  column-gap: 20px; }
+  column-gap: 20px;
+  max-height: 400px; }
+  #theStory p {
+    margin: 1em 0px; }
   #theStory p:first-child {
     font-size: 1.2em;
-    margin-bottom: -.5em; }
+    margin-top: 75px;
+    margin-bottom: 75px; }
 
 #theIdeas {
   display: inline;
@@ -63,9 +68,6 @@ a {
   margin: 0px auto;
   display: block;
   float: none; }
-
-#loginArea {
-  text-align: center; }
 
 #started, #ideas, #completed, #newProject {
   display: inline;
@@ -133,16 +135,35 @@ a {
   .author #ideas .project:hover .overlay {
     display: none; }
 
-#loginArea {
-  position: absolute;
+#settingsArea {
+  position: fixed;
   right: 0px;
   top: 2em;
-  width: 200px; }
-  #loginArea span {
+  width: 175px;
+  text-align: left; }
+  #settingsArea a {
+    text-decoration: none;
+    display: block; }
+  #settingsArea i {
+    margin-right: 5px; }
+  #settingsArea span {
     font-size: 1.2em;
     font-weight: 600; }
-  #loginArea input {
+  #settingsArea input {
     margin: 2px 2px; }
+
+#loginForm {
+  display: none; }
+  #loginForm input[type=text],
+  #loginForm input[type=password] {
+    margin: 4px;
+    float: right; }
+  #loginForm label {
+    margin: 4px;
+    float: left; }
+  #loginForm input[type=submit] {
+    margin: 0 auto;
+    display: block; }
 
 #score {
   text-align: center; }
