--- a/wp-content/themes/bigscarytheme/styles/fluid.scss
+++ b/wp-content/themes/bigscarytheme/styles/fluid.scss
@@ -226,7 +226,8 @@ a {
 }
 
 #loginForm,
-#registerForm {
+#registerForm,
+#apfform {
 	display: none;
 
 	input[type=text],
@@ -243,6 +244,14 @@ a {
 	input[type=submit] {
 		margin: 0 auto;
 		display: block;
+	}
+}
+
+#apfform {
+	input,
+	textarea {
+		width: 600px;
+		float: left;
 	}
 }
 
