fixing content displayed for completed tasks

--- a/wp-content/themes/bigscarytheme/styles/fluid.css
+++ b/wp-content/themes/bigscarytheme/styles/fluid.css
@@ -109,6 +109,9 @@ a {
   #completed .inProgressPercent, #newProject .inProgressPercent {
     display: none; }
 
+#completed article header h4 {
+  display: none; }
+
 #newProject {
   display: none; }
 
