--- a/src/views/ideas.jade
+++ b/src/views/ideas.jade
@@ -1,4 +1,13 @@
-.container
+.header
+    h1 The Big Scary List
+
+.container.ideas
     .row
+        .col-xs-6
+            h2 In Progress
+        .col-xs-6
+            h2 Ideas
+    .rows
         .col-xs-12
-            h1 The Big Scary List
+            h2 Completed
+
