--- a/src/views/layout.jade
+++ b/src/views/layout.jade
@@ -2,6 +2,7 @@
 html(lang="en")
     head
         link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/css/styles.css')
         title Big Scary List
   body
       a(href='https://github.com/obihann/The-Big-Scary-List')
