--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -6,6 +6,11 @@ body {
   background-color: #FFF;
 }
 
-h1, h2 {
-  text-align: center;
+ul, li {
+  margin: 20px 0px;
+}
+
+small {
+  display: block;
+  margin: 6px 0px 0px 0px;
 }
