--- a/app/views/ideas.jade
+++ b/app/views/ideas.jade
@@ -1,5 +1,21 @@
 .header
     h1.text-center The Big Scary List
+.container
+    .row.text-center
+        ul.list-inline.text-center
+            li
+                i.fa.fa-plus
+                    a(href="/") My List
+            li
+                i.fa.fa-plus
+                    a(href="/new-idea") New Idea
+            li
+                i.fa.fa-link 
+                    a(href="/") Share My List
+            li
+                i.fa.fa-times
+                    a(href="/logout") Log Out
+                    
 
 .container.ideas
     .row
