--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,26 @@ body {
     background-color: #e2e2e2;
 }
 
+a {
+    color: #000;
+
+    &:hover {
+        color: #000;
+    }
+}
+
+i {
+    margin: 0px 5px;
+
+    a {
+        margin: 0px 0px 0px 2px;
+    }
+}
+
+.container {
+    padding: 20px;
+}
+
 .ideas {
     background-color: #FFF;
 }
