--- a/src/views/ideas.jade
+++ b/src/views/ideas.jade
@@ -39,12 +39,13 @@
                         li
                             span.lead=idea.name
                             p= idea.description
+                            a(class="btn.btn-default", href="/idea/start/#{idea._id}") Start the idea
     .rows
         .col-xs-12
             h3.text-center Completed
             ul.text-center.list-unstyled
                 each idea in ideas
-                    if !idea.started && !idea.finished
+                    if idea.finished
                         li
                             span.lead=idea.name
                             p= idea.description
