--- a/src/views/ideas-new.jade
+++ b/src/views/ideas-new.jade
@@ -26,5 +26,5 @@
                     input(name="idea", type="text", class="form-control", placeholder="What do you call it?") 
                 div.form-group
                     label(for="description") Tell us about it
-                    input(name="description", type="textarea", class="form-control", placeholder="What does it do?") 
+                    input(name="description", type="text", class="form-control", placeholder="What does it do?") 
                 button(type="submit", class="btn btn-default") Save idea
